--- a/EstacionamentoOnlineRelatorios/WebContent/porPeriodo.xhtml
+++ b/EstacionamentoOnlineRelatorios/WebContent/porPeriodo.xhtml
@@ -1,36 +1,14 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:p="http://primefaces.org/ui">
-
-<h:head />
-
-<h:body>
-	<h:form>
-		<div align="center">
-			<p:graphicImage name="img/logotipo.png" style="width:7%; height:7%; margin-top:0; margin-bottom:0; " />
-		</div>
-		<p:menubar style="margin-bottom:1%;">
-			<p:submenu label="Aluguel" icon="ui-icon-document">
-				<p:menuitem value="Por período" url="/porPeriodo.jsf" icon="ui-icon-arrow-1-e"/>
-				<p:menuitem value="Por tipo da vaga" url="/porTipo.jsf" icon="ui-icon-arrow-1-e"/>
-				<p:menuitem value="Por clientes" url="/porCliente.jsf" icon="ui-icon-arrow-1-e"/>
-			</p:submenu>
-			<p:submenu label="Ranking" icon="ui-icon-document">
-				<p:submenu label="Meus estacionamentos">
-					<p:menuitem value="Project" url="#" />
-					<p:menuitem value="Other" url="#" />
-				</p:submenu>
-				<p:menuitem value="Demais estacionamentos" url="#" />
-			</p:submenu>
-			<f:facet name="options">
-				<p:commandButton type="button" value="Logout" icon="ui-icon-extlink" />
-			</f:facet>
-		</p:menubar>
+<!DOCTYPE html>
+<ui:composition template="/layout.xhtml"
+	xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:ui="http://java.sun.com/jsf/facelets">
+	
+	<ui:define name="corpo">
+		
+		<h:form>
 		
 		<p:growl id="messages" showDetail="false" />
 		<h:panelGrid columns="6">
@@ -130,5 +108,6 @@
 			<p:chart type="bar" model="#{dataExporterView.barModel}" style="height:300px"/>
 		</p:panelGrid> -->
 	</h:form>
-</h:body>
-</html>
+	
+	</ui:define>
+</ui:composition>
