Ajustes de maio....

--- a/EstacionamentoOnlineRelatorios/WebContent/login.xhtml
+++ b/EstacionamentoOnlineRelatorios/WebContent/login.xhtml
@@ -20,7 +20,7 @@
 	<h:form>
 		<p:growl id="msg" showDetail="false" />
 		<div align="center">
-			<p:graphicImage name="img/logotipo.png" style="width:10%; height:10%; margin-top:0; margin-bottom:0; " />
+			<p:graphicImage name="img/logotipo.png" style="width:10%; height:10%; margin-top:2%; margin-bottom:0; " />
 			<h:panelGrid columns="2">
 				<p:outputLabel for="login" value="Login:" />
 				<p:inputText id="login" value="#{autenticacao.login}" title="Informe o login" required="true" />
