--- a/EstacionamentoOnlineRelatorios/WebContent/porPeriodo.xhtml
+++ b/EstacionamentoOnlineRelatorios/WebContent/porPeriodo.xhtml
@@ -73,14 +73,14 @@
 				<f:facet name="header">
 					<h:outputText value="Hora de entrada" />
 				</f:facet>
-				<h:outputText value="#{aluguel.horaEntrada}" />
+				<h:outputText value="#{aluguel.dtEntradaFormatada}" />
 			</p:column>
 
 			<p:column>
 				<f:facet name="header">
 					<h:outputText value="Hora de saída" />
 				</f:facet>
-				<h:outputText value="#{aluguel.horaSaida}" />
+				<h:outputText value="#{aluguel.dtSaidaFormatada}" />
 			</p:column>
 
 			<p:column>
