Ajuste no charset dos relatórios

--- a/EstacionamentoOnlineRelatorios/WebContent/porTipo.xhtml
+++ b/EstacionamentoOnlineRelatorios/WebContent/porTipo.xhtml
@@ -23,17 +23,17 @@
 		<div align="right">
 			<h:commandLink>
 				<p:graphicImage name="img/logo_excel.png" width="40" title="Exportar em excel" />
-				<p:dataExporter type="xls" target="tbl" fileName="relatorios" />
+				<p:dataExporter type="xls" target="tbl" fileName="relatorios" encoding="ISO-8859-1" />
 			</h:commandLink>
 
 			<h:commandLink>
 				<p:graphicImage name="img/logo_pdf.png" width="40" title="Exportar em PDF" />
-				<p:dataExporter type="pdf" target="tbl" fileName="relatorios" preProcessor="#{dataExporterView.preProcessPDF}" />
+				<p:dataExporter type="pdf" target="tbl" fileName="relatorios" preProcessor="#{dataExporterView.preProcessPDF}" encoding="ISO-8859-1" />
 			</h:commandLink>
 
 			<h:commandLink>
 				<p:graphicImage name="img/logo_csv.png" width="40" title="Exportar em CSV" />
-				<p:dataExporter type="csv" target="tbl" fileName="relatorios" />
+				<p:dataExporter type="csv" target="tbl" fileName="relatorios" encoding="ISO-8859-1" />
 			</h:commandLink>
 		</div>
 
