Incluindo o gráfico pizza no Tipo de vaga

--- a/EstacionamentoOnlineRelatorios/WebContent/porTipo.xhtml
+++ b/EstacionamentoOnlineRelatorios/WebContent/porTipo.xhtml
@@ -39,7 +39,7 @@
 
 		<p:dataTable id="tbl" var="aluguel" 
 			value="#{dataExporterView.relatorios}" paginatorTemplate=" {FirstPageLink} {PageLinks} {LastPageLink}" 
-			paginator="true" rows="10" paginatorPosition="bottom" emptyMessage="Nenhum aluguel cadastrado." style="margin-bottom:20px; margin-top:1%;">
+			paginator="true" rows="5" paginatorPosition="bottom" emptyMessage="Nenhum aluguel cadastrado." style="margin-bottom:20px; margin-top:1%;">
 
 			<p:column>
 				<f:facet name="header">
@@ -100,11 +100,17 @@
 		<!-- <p:panelGrid>
 			<p:chart type="line" model="#{dataExporterView.dateModel}" style="height:400px;"/>
 		</p:panelGrid> -->
-		<!-- <h:panelGrid>
-			<p:chart type="pie" model="#{dataExporterView.pieModel1}" style="width:400px;height:300px" />
-		</h:panelGrid>
 		
-		<p:panelGrid>
+		<p:commandButton value="Gráfico por preço" type="button" onclick="PF('dlg3').show();" />
+		
+		<p:dialog  header="" widgetVar="dlg3" showEffect="explode" hideEffect="bounce" modal="true" height="50%">
+			<h:panelGrid>
+				<p:chart type="pie" model="#{dataExporterView.pieModel1}" style="width:400px;height:50%" />
+			</h:panelGrid>
+		</p:dialog>
+		
+		
+		<!--<p:panelGrid>
 			<p:chart type="bar" model="#{dataExporterView.barModel}" style="height:300px"/>
 		</p:panelGrid> -->
 	</h:form>
