Acertando problemas encontrados e realizando melhorias

--- a/EstacionamentoOnlineRelatorios/WebContent/estacionamentoAdmin.xhtml
+++ b/EstacionamentoOnlineRelatorios/WebContent/estacionamentoAdmin.xhtml
@@ -60,7 +60,7 @@
 
 			<p:column width="10%" style="text-align:center;">
 				<f:facet name="header">
-					<h:outputText value="Avaliação" />
+					<h:outputText value="Ranking" />
 				</f:facet>
 				<h:outputText value="#{estacionamento.avaliacao}"/>
 			</p:column>
