--- a/EstacionamentoOnlineRelatorios/WebContent/porPeriodo.xhtml
+++ b/EstacionamentoOnlineRelatorios/WebContent/porPeriodo.xhtml
@@ -97,16 +97,15 @@
 				<h:outputText value="#{aluguel.tipoPagamento}" />
 			</p:column>
 		</p:dataTable>
-		<!-- <p:panelGrid>
-			<p:chart type="line" model="#{dataExporterView.dateModel}" style="height:400px;"/>
-		</p:panelGrid> -->
-		<!-- <h:panelGrid>
-			<p:chart type="pie" model="#{dataExporterView.pieModel1}" style="width:400px;height:300px" />
-		</h:panelGrid>
 		
-		<p:panelGrid>
-			<p:chart type="bar" model="#{dataExporterView.barModel}" style="height:300px"/>
-		</p:panelGrid> -->
+		<p:commandButton value="Gráfico faturamento mensal" type="button" onclick="PF('dlg6').show();" />
+		
+		<p:dialog  header="" widgetVar="dlg6" showEffect="explode" modal="true" height="50%">
+			<h:panelGrid>
+				<p:chart type="pie" model="#{dataExporterView.faturamento}" style="width:400px;height:50%" />
+			</h:panelGrid>
+		</p:dialog>
+		
 	</h:form>
 	
 	</ui:define>
